# CopyCat-Crusher

./: .gitignore  CMakeLists.txt  README.md  debug.txt
include/algorithms/: levenshtein.hpp  rolling_hash.hpp  suffix_automaton.hpp  winnowing.hpp
include/core/: batch_analyzer.hpp  file_manager.hpp
include/models/: comparison_result.hpp  submission.hpp
include/normalizer/: token_normalizer.hpp
include/report/: html_report.hpp
include/similarity/: similarity_engine.hpp
include/tokenizer/: clang_tokenizer.hpp
src/: main.cpp
src/algorithms/: levenshtein.cpp  rolling_hash.cpp  suffix_automaton.cpp  winnowing.cpp
src/core/: batch_analyzer.cpp  file_manager.cpp
src/normalizer/: token_normalizer.cpp
src/report/: html_report.cpp
src/similarity/: similarity_engine.cpp
src/tokenizer/: clang_tokenizer.cpp
